2020-March-28 Struan Robertson

		* CollisionOperator.h/.cpp, Marquardt.cpp: Revert fix for Marquardt performance issue
		in check-in 1480 in favour of fix based on control flags.

		* ConditionsManager.h: Fix for QA break related to check-in 1481.

2020-March-21 Struan Robertson

		* ConditionsManager.h/.cpp: Fix for PT set bug.

		* ExchangeReaction.h/.cpp: Added code to account for a reservoir state.

		* ReactionManager.cpp: Simplified reaction type decision logic. 

		* Minor code updates to fix compiler warnings.

		* Documentation update.

		* Win32 baseline update. 

		* Schema update.

2020-March-17 Struan Robertson

		* CollisionOperator.h/.cpp: Altered to improve speed of grain and species population 
		calculation.

		* Minor code updates to fix compiler warnings.

2020-March-01 Struan Robertson

		* Minor code updates to fix compiler warnings.

		* Examples: Example.sh script updated.

2020-February-29 Struan Robertson

		* gStrucuture.h/.cpp: Implementation update of reduced mass calculators for bend and 
		inversion modes.

		* Linux64: Compilation fixes.

		* Examples: H2Ominimal baselines added.

2020-February-23 Struan Robertson

		* gStructure.h/.cpp: Implementation update of reduced mass calculators for bend and 
		inversion modes.

		* Examples update.

		* Documentation update.

		* Schema update.

2020-February-16 Struan Robertson

		* gDensityOfStates.h, gStrucuture.h/.cpp: Implementation update of reduced mass calculators 
		for bend and inversion modes.

		* QA.bat, Examples.bat: Changes related to VS 2015 (VC14) removal.

2020-February-08 Struan Robertson

		* CollisionOperator.cpp: Fixed bug relating to population time steps.

		* Documentation update.

		* Removed VS 2015 (VC14) build files.

2020-January-19 Struan Robertson

		* FourierGrid1D, gStrucuture.h/.cpp: Initial implementation of reduced mass calculators 
		for bend and inversion modes.

2020-January-18 Struan Robertson
